# skbuild-example

./: .gitignore  CMakeLists.txt  README.md  setup.py
hello/: __init__.py  _hello.cxx
skhello/: _hello.cxx
